--- a/app/(auth)/layout.module.css
+++ b/app/(auth)/layout.module.css
@@ -1,8 +1,8 @@
 .wrapper {
-  /* min-height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(180deg, #294045 0%, #1e2f33 100%);
   display: flex;
-  align-items: center;
-  justify-content: center; */
+  align-items: flex-start;
+  justify-content: center;
   padding: 20px;
 }
