--- a/components/StatisticsTab/Chart/Chart.module.css
+++ b/components/StatisticsTab/Chart/Chart.module.css
@@ -1,10 +1,11 @@
 .chart-container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 264px;
   height: 264px;
-  background-color: aliceblue;
+  background-color: transparent;
   border-radius: 100%;
   margin-bottom: 60px;
 }
@@ -14,4 +15,16 @@
     width: 288px;
     height: 288px;
   }
+}
+
+.balance-amount {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  color: var(--main-white);
 }
