fix transactionsList styles

--- a/app/(dashboard)/layout.module.css
+++ b/app/(dashboard)/layout.module.css
@@ -9,6 +9,7 @@
   flex: 1;
   gap: 20px;
   padding: 20px;
+  flex-direction: column;
 }
 
 .content {
@@ -16,7 +17,7 @@
 }
 
 /* Tablet */
-@media (min-width: 744px) {
+@media (min-width: 768px) {
   .mainContent {
     gap: 32px;
     padding: 32px;
@@ -26,7 +27,10 @@
 /* Desktop */
 @media (min-width: 1280px) {
   .mainContent {
-    gap: 40px;
+    flex-direction: row;
+    width: 1280px;
+    margin: 0 auto;
+    gap: 24px;
     padding: 40px;
   }
 }
