--- a/components/HomeTab/TransactionsItem.module.css
+++ b/components/HomeTab/TransactionsItem.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   flex-direction: column;
   gap: 16px;
-  margin-top: 24px;
+  /* margin-top: 24px; */
 }
 
 .transactionTable {
@@ -211,4 +211,13 @@
   width: 25px;
   height: 25px;
   color: #000;
+}
+
+@media only screen and (min-width: 1280px) {
+  .tableWrapper,
+  .transactionTable,
+  .transactionPage {
+    min-width: 757px;
+    min-height: 585px;
+  }
 }
