--- a/components/UserAcountLayout/Sidebar/Currency.module.css
+++ b/components/UserAcountLayout/Sidebar/Currency.module.css
@@ -1,74 +1,117 @@
 .currencyContainer {
-	border-radius: 16px;
-	padding: 16px;
-	width: 288px;
-	height: 390px;
-	background: linear-gradient(180deg, #355359 0%, #3b5d63 100%);
+  border-radius: 16px;
+  padding: 16px;
+  width: 288px;
+  height: 390px;
+  background: linear-gradient(180deg, #355359 0%, #3b5d63 100%);
 }
 
 .header {
-	display: flex;
-	border-radius: 12px;
-	padding: 16px 32px;
-	width: 304px;
-	height: 51px;
-	font-family: var(--font-family);
-	font-weight: 500;
-	font-size: 16px;
-	gap: 30.5px;
-	color: var(--main-white);
-	background: linear-gradient(180deg, #294045 0%, #1e2f33 100%);
+  display: flex;
+  border-radius: 12px;
+  padding: 16px 32px;
+  width: 304px;
+  height: 51px;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  gap: 30.5px;
+  color: var(--main-white);
+  background: linear-gradient(180deg, #294045 0%, #1e2f33 100%);
 }
 
 .header div {
-	flex: 1;
-	text-align: center;
+  flex: 1;
+  text-align: center;
 }
 
 .header div:first-child {
-	text-align: left;
+  text-align: left;
 }
 
 .tableWrapper {
-	width: 304px;
-	margin: 0 auto;
+  width: 304px;
+  margin: 0 auto;
 }
 
 .table {
-	width: 100%;
-	border-spacing: 0;
-	font-family: var(--font-family);
-	font-weight: 400;
-	font-size: 16px;
-	color: var(--main-white);
+  width: 100%;
+  border-spacing: 0;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--main-white);
 }
 
 .table td {
-	padding: 16px 32px;
-	text-align: center;
+  padding: 16px 32px;
+  text-align: center;
 }
 
 .table td:first-child {
-	text-align: left;
+  text-align: left;
 }
 
 .table tr {
-	height: 51px;
+  height: 51px;
+}
+
+@media (min-width: 768px) {
+  .currencyContainer {
+    max-width: 336px;
+    width: 336px;
+    height: 310px;
+  }
+  .wrapper {
+    display: initial;
+    padding: 0;
+  }
+
+  .illustration {
+    margin-top: 9px;
+    width: 181px;
+    height: 135px;
+    margin: 0 auto;
+  }
 }
 
 @media (min-width: 1280px) {
-	.currencyContainer {
-		width: 448px;
-		height: 354px;
-		background: none;
-		padding: 23px 24px;
-		border-radius: 0;
-		gap: 12px;
-	}
-	.header {
-		width: 400px;
-	}
-	.tableWrapper {
-		width: 400px;
-	}
+  .header {
+    max-width: 400px;
+  }
+
+  .currencyContainer {
+    max-width: 400px;
+    width: 400px;
+    background: transparent;
+    margin: 0 auto;
+  }
+  .wrapper {
+    display: initial;
+    padding: 0;
+  }
+
+  .illustration {
+    margin: 0 auto;
+    margin-top: 21px;
+    width: 222px;
+    height: 166px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .currencyContainer {
+    width: 448px;
+    height: 354px;
+    background: none;
+    padding: 0;
+    border-radius: 0;
+    gap: 12px;
+  }
+  .header {
+    width: 400px;
+  }
+  .tableWrapper {
+    width: 400px;
+  }
 }
