--- a/components/HomeTab/TransactionsItem.module.css
+++ b/components/HomeTab/TransactionsItem.module.css
@@ -8,6 +8,8 @@
   flex-direction: column;
   gap: 16px;
   /* margin-top: 24px; */
+  background: linear-gradient(180deg, #355359 0%, #3b5d63 100%);
+  border-radius: 16px;
 }
 
 .transactionTable {
