--- a/components/UserAcountLayout/Sidebar/Sidebar.module.css
+++ b/components/UserAcountLayout/Sidebar/Sidebar.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  margin: 0 auto;
 }
 
 @media only screen and (min-width: 768px) {
@@ -35,7 +36,7 @@
 
 @media only screen and (min-width: 1280px) {
   .accountContainer {
-    border-radius: 16px;
+    border-radius: 24px;
     width: 448px;
     height: 469px;
   }
