--- a/app/(auth)/layout.module.css
+++ b/app/(auth)/layout.module.css
@@ -2,7 +2,17 @@
   min-height: 100vh;
   background: linear-gradient(180deg, #294045 0%, #1e2f33 100%);
   display: flex;
-  align-items: flex-start;
+
   justify-content: center;
   padding: 20px;
+
+  position: relative;
+  overflow-x: hidden;
+}
+
+@media (min-width: 768px) and (max-width: 1279px) {
+  .wrapper {
+    padding: 0px;
+    padding-bottom: 320px;
+  }
 }
