--- a/components/HomeTab/TransactionsItem.module.css
+++ b/components/HomeTab/TransactionsItem.module.css
@@ -251,3 +251,27 @@ tbody.desktopTd tr:nth-child(n + 2):nth-child(even) {
 .editIcon {
   cursor: pointer;
 }
+
+/* Scrollbar */
+
+@media only screen and (min-width: 768px) {
+  .scroll {
+    max-height: 347px;
+    overflow-y: auto;
+  }
+
+  .scroll::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  .scroll::-webkit-scrollbar-track {
+    background: transparent;
+    margin-top: 120px;
+    margin-bottom: 120px;
+  }
+
+  .scroll::-webkit-scrollbar-thumb {
+    background-color: #508f8c;
+    border-radius: 16px;
+  }
+}
