--- a/components/StatisticsTab/Chart/Chart.module.css
+++ b/components/StatisticsTab/Chart/Chart.module.css
@@ -28,3 +28,12 @@
   text-align: center;
   color: var(--main-white);
 }
+
+.chart-empty {
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 18px;
+  text-align: center;
+  color: rgba(252, 252, 252, 0.6);
+  line-height: 1.5;
+}
