--- a/components/UserAcountLayout/Sidebar/Currency.module.css
+++ b/components/UserAcountLayout/Sidebar/Currency.module.css
@@ -111,7 +111,24 @@
   .header {
     width: 400px;
   }
+
   .tableWrapper {
     width: 400px;
   }
 }
+
+.errorWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
+}
+
+.errorText {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 24px;
+  color: #fcfcfc;
+}
+
