--- a/components/UserAcountLayout/Sidebar/Currency.module.css
+++ b/components/UserAcountLayout/Sidebar/Currency.module.css
@@ -1,4 +1,5 @@
 .currencyContainer {
+  position: relative;
   border-radius: 16px;
   padding: 16px;
   width: 288px;
@@ -56,12 +57,25 @@
   height: 51px;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  color: var(--main-white);
+  font-family: var(--font-family);
+  font-size: 16px;
+}
+
 @media (min-width: 768px) {
   .currencyContainer {
     max-width: 336px;
     width: 336px;
     height: 310px;
   }
+
   .wrapper {
     display: initial;
     padding: 0;
@@ -86,6 +100,7 @@
     background: transparent;
     margin: 0 auto;
   }
+
   .wrapper {
     display: initial;
     padding: 0;
@@ -108,9 +123,11 @@
     border-radius: 0;
     gap: 12px;
   }
+
   .header {
     width: 400px;
   }
+
   .tableWrapper {
     width: 400px;
   }
